[gd_scene load_steps=29 format=2]

[ext_resource path="res://portada.png" type="Texture" id=1]
[ext_resource path="res://nome_cierres.png" type="Texture" id=2]
[ext_resource path="res://menu.gd" type="Script" id=3]
[ext_resource path="res://controles.png" type="Texture" id=4]
[ext_resource path="res://iniciar.png" type="Texture" id=5]
[ext_resource path="res://controles_foto.png" type="Texture" id=6]
[ext_resource path="res://peakpx.jpg" type="Texture" id=7]
[ext_resource path="res://salir.png" type="Texture" id=8]
[ext_resource path="res://regresar.png" type="Texture" id=9]
[ext_resource path="res://shaggy_clave_1.png" type="Texture" id=10]

[sub_resource type="Animation" id=22]
resource_name = "carga_apenas"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Salir:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -252, 540 ), Vector2( 169, 540 ), Vector2( 138, 540 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("iniciar:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 452, 363 ), Vector2( 57, 363 ), Vector2( 77, 363 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("mostrar_controles:rect_position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 65, 684 ), Vector2( 65, 450 ), Vector2( 65, 458 ) ]
}

[sub_resource type="Animation" id=19]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("NombreMenu:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("NombreMenu:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 32, 32 ) ]
}

[sub_resource type="Animation" id=20]
resource_name = "menu_intro"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("NombreMenu:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 32, 32 ), Vector2( 10, 10 ), Vector2( 12, 12 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("mostrar_controles_foto:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 202.591, 316.527 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.301961, 0.447059, 1, 0 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "animacion_controles"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("mostrar_controles_foto:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 202.591, 316.527 ), Vector2( 202.591, 355 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "mostrar_controles_fondo"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.301961, 0.447059, 1, 0 ), Color( 0.301961, 0.447059, 1, 0.380392 ) ]
}

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("mostrar_controles_foto:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 202.591, 316.527 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.301961, 0.447059, 1, 0 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "mostrar_controles_fondo"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.301961, 0.447059, 1, 0 ), Color( 0.301961, 0.447059, 1, 0.380392 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "quitar_fondo"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.301961, 0.447059, 1, 0.380392 ), Color( 0.301961, 0.447059, 1, 0 ) ]
}

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("control_menu_jaja/NombreMenu:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 201.999, 150.596 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "menuNombre"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("control_menu_jaja/NombreMenu:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1.36604, 1.36604 ),
"update": 0,
"values": [ Vector2( 201.999, 150.596 ), Vector2( 201.999, 154.551 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001

[sub_resource type="Animation" id=4]
resource_name = "entrar_contrase単a"

[sub_resource type="Animation" id=5]
resource_name = "salir_contrase単a"

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "entrar_contrase単a"

[sub_resource type="Animation" id=11]
resource_name = "negro"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.498039 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "salir_contrase単a"

[node name="menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ -10.9633 ]
}

[node name="timer_meteorito_menu" type="Timer" parent="."]
process_mode = 0
wait_time = 0.5
autostart = true

[node name="carga_manu_animacion_nose" type="AnimationPlayer" parent="."]
anims/carga_apenas = SubResource( 22 )

[node name="control_menu_jaja" type="Control" parent="."]
anchor_right = 0.915
anchor_bottom = 0.5
margin_left = 2.0
margin_bottom = 3.0

[node name="NombreMenu" type="Sprite" parent="control_menu_jaja"]
position = Vector2( 201.999, 150.596 )
scale = Vector2( 32, 32 )
texture = ExtResource( 1 )

[node name="nombre_menu_aniamtor" type="AnimationPlayer" parent="control_menu_jaja"]
autoplay = "menu_intro"
anims/RESET = SubResource( 19 )
anims/menu_intro = SubResource( 20 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )

[node name="iniciar" type="Button" parent="."]
margin_left = 452.0
margin_top = 363.0
margin_right = 506.0
margin_bottom = 383.0
rect_scale = Vector2( 4, 4 )
input_pass_on_modal_close_click = false
size_flags_horizontal = 0
size_flags_vertical = 0
shortcut_in_tooltip = false
icon = ExtResource( 5 )
flat = true
align = 0

[node name="Salir" type="Button" parent="."]
margin_left = -252.0
margin_top = 540.0
margin_right = -211.0
margin_bottom = 560.0
rect_scale = Vector2( 3, 3 )
input_pass_on_modal_close_click = false
size_flags_stretch_ratio = 0.0
shortcut_in_tooltip = false
icon = ExtResource( 8 )
flat = true

[node name="mostrar_controles" type="Button" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 65.0
margin_top = 384.0
margin_right = -271.0
margin_bottom = 404.0
rect_scale = Vector2( 4, 4 )
icon = ExtResource( 4 )
flat = true

[node name="Controles" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Controles"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.301961, 0.447059, 1, 0 )

[node name="Controles" type="Sprite" parent="Controles"]
position = Vector2( 198.591, 188.527 )
scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 4 )

[node name="Control" type="Control" parent="Controles/Controles"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -25.0
margin_top = -3.0
margin_right = -26.0
margin_bottom = -3.0

[node name="shaggy_clave_1" type="Sprite" parent="Controles/Controles"]
position = Vector2( 0, -13.7143 )
texture = ExtResource( 10 )

[node name="mostrar_controles_foto" type="Sprite" parent="Controles"]
position = Vector2( 202.591, 316.527 )
scale = Vector2( 4.5, 4.5 )
texture = ExtResource( 6 )

[node name="esconder" type="Button" parent="Controles"]
anchor_left = 0.268
anchor_top = 0.9
anchor_right = 0.785
anchor_bottom = 1.0
margin_left = -0.200005
margin_right = -138.0
margin_bottom = -40.0
rect_scale = Vector2( 3, 3 )
icon = ExtResource( 9 )
flat = true

[node name="controles_animacion" type="AnimationPlayer" parent="Controles"]
autoplay = "animacion_controles"
anims/RESET = SubResource( 12 )
anims/animacion_controles = SubResource( 13 )
anims/mostrar_controles_fondo = SubResource( 14 )

[node name="controles_animacion2" type="AnimationPlayer" parent="Controles"]
anims/RESET = SubResource( 15 )
anims/mostrar_controles_fondo = SubResource( 17 )
anims/quitar_fondo = SubResource( 18 )

[node name="NoMeCierres" type="Sprite" parent="."]
visible = false
position = Vector2( 196, 534 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="NombreMenu_animacion" type="AnimationPlayer" parent="."]
autoplay = "menuNombre"
anims/RESET = SubResource( 1 )
anims/menuNombre = SubResource( 2 )

[node name="control_contrase単a_aniamcion" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/RESET = SubResource( 3 )
"anims/entrar_contrase単a" = SubResource( 4 )
"anims/salir_contrase単a" = SubResource( 5 )

[node name="control_contrase単a_aniamcion2" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/RESET = SubResource( 6 )
"anims/entrar_contrase単a" = SubResource( 7 )
anims/negro = SubResource( 11 )
"anims/salir_contrase単a" = SubResource( 8 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = -1
follow_viewport_enable = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 0, 500 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 200.037, 300.76 )
scale = Vector2( 0.277726, 0.202046 )
texture = ExtResource( 7 )

[connection signal="timeout" from="timer_meteorito_menu" to="." method="_on_timer_meteorito_menu_timeout"]
[connection signal="animation_finished" from="control_menu_jaja/nombre_menu_aniamtor" to="." method="_on_nombre_menu_aniamtor_animation_finished"]
[connection signal="pressed" from="iniciar" to="." method="_on_Button_pressed"]
[connection signal="mouse_entered" from="Salir" to="." method="_on_Salir_mouse_entered"]
[connection signal="mouse_exited" from="Salir" to="." method="_on_Salir_mouse_exited"]
[connection signal="pressed" from="Salir" to="." method="_on_Salir_pressed"]
[connection signal="pressed" from="mostrar_controles" to="." method="_on_Button2_pressed"]
[connection signal="mouse_entered" from="Controles/Controles/Control" to="." method="_on_Control_mouse_entered"]
[connection signal="mouse_exited" from="Controles/Controles/Control" to="." method="_on_Control_mouse_exited"]
[connection signal="pressed" from="Controles/esconder" to="." method="_on_esconder_pressed"]
[connection signal="animation_finished" from="Controles/controles_animacion2" to="." method="_on_controles_animacion2_animation_finished"]
[connection signal="animation_finished" from="control_contrase単a_aniamcion" to="." method="_on_control_contrasea_aniamcion_animation_finished"]
[connection signal="animation_finished" from="control_contrase単a_aniamcion" to="." method="_on_control_contrasea_aniamcion_animation_finished_2"]
[connection signal="animation_finished" from="control_contrase単a_aniamcion2" to="." method="_on_control_contrasea_aniamcion2_animation_finished"]
